  properties of the executation of a tactic without keeping the effect
  of the execution.

Focusing

- Focusing bracket `{` now supports single-numbered goal selector,
  e.g. `2: {` will focus on the second sub-goal. As usual, unfocus
  with `}` once the sub-goal is fully solved.
  The `Focus` and `Unfocus` commands are now deprecated.

Vernacular Commands

- Printing All is no longer an option as such; instead, the command
  Set Printing All sets or unsets other Printing options to remove high-level
  printing features. The new command Set Printing Sugared exactly reverses
  those options, providing high-level printing features. Unset Printing All
  restores the printing options in effect at the time of the last Set
  Printing All.
- The command Set Printing Defaults restores the default printing options.
- The command Set Printing Universes no longer affects the printing
  of universe inconsistency explanations. Instead, there is a new command
  Set Printing Universe Explanations.
- The command Set Printing Let Binder Types prints the types of binders
  for let-in expressions, disabled by default. Such printing had been
  enabled by Set Printing All.
- Proofs ending in "Qed exporting ident, .., ident" are not supported
  anymore. Constants generated during `abstract` are kept private to the
  local environment.
- The deprecated Coercion Local, Open Local Scope, Notation Local syntax
  was removed. Use Local as a prefix instead.
- For the Extraction Language command, "OCaml" is spelled correctly.
  The older "Ocaml" is still accepted, but deprecated.
- Using “Require” inside a section is deprecated.
- An experimental command "Show Extraction" allows to extract the content
  of the current ongoing proof (grant wish #4129).
- Coercion now accepts the type of its argument to be "Prop" or "Type".
- The "Export" modifier can now be used when setting and unsetting options, and
  will result in performing the same change when the module corresponding the