@@ -54,7 +54,7 @@ let all_options : t = {
     printing_primitive_projection_compatibility = true;
     printing_primitive_projection_parameters = true;
     printing_projections = false;
-    printing_records = true;
+    printing_records = false;
     printing_synth = false;
     printing_universes = true;
     printing_wildcard = false;
